custom exceptions. java 17 edit. transactional for create and update